feat: fixing merge